word guessing completed

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentallgames.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentallgames.html
@@ -23,7 +23,7 @@
      
     <div class="word-guessing-game-grid-2">
          <img src="/static/Leonardo_Phoenix_Gradient_background_light_gray_to_pastel_blue_3.jpg" alt="word Guessing Game" class="word-guessing-game-img">
-         <a href="#" class="games-grid-button"> Play <i class="fa-solid fa-play"></i> </a>
+         <a href="{% url "studentwordgame" student_id %}" class="games-grid-button"> Play <i class="fa-solid fa-play"></i> </a>
     </div>
       
       <div class="missing-character-guessing-game-grid-3">
