puzzle word guess game completed

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentallgames.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studentallgames.html
@@ -28,7 +28,7 @@
       
       <div class="missing-character-guessing-game-grid-3">
          <img src="/static/Leonardo_Phoenix_Gradient_background_light_gray_to_pastel_blue_2 (1).jpg" class="missing-character-game-img">
-         <a href="#" class="games-grid-button"> Play <i class="fa-solid fa-play"></i> </a>
+         <a href="{% url "studentwordpuzleguessgame" student_id  %}" class="games-grid-button"> Play <i class="fa-solid fa-play"></i> </a>
     </div>
        <div class="coin-toss-guessing-game-grid-4">
          <img src="/static/Leonardo_Phoenix_Gradient_background_light_gray_to_pastel_blue_0.jpg" class="coin-toss-game-img">
