fixed student homework headline css

--- a/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studenthomework.html
+++ b/Student_Learn_Daily_Project/Student_Learn_Daily_Project/templates/studenthomework.html
@@ -29,7 +29,7 @@
     </div>
     
     <div class="list-of-home-work">
-        <h3>List of Homework to Do Today</h3>
+        <h3 class="lohwh">List of Homework to Do Today</h3>
         {% if todos %}
             <table class="list-hw-table">
                 <tr>
